--- a/scripts/style.css
+++ b/scripts/style.css
@@ -18,7 +18,7 @@ body {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -34,7 +34,7 @@ body {
   padding: 15px;
   margin: 10px;	
   background: #FFBD59;
-  color: #191970;
+  color: #000000;
   font-size: 10px;
   font-weight: normal;
   line-height: 0.6em;
@@ -46,11 +46,11 @@ body {
   display:none;
 }
 
-#purchasingformButton, #showForm {
+#purchasingformButton {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -58,24 +58,31 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:46%;
+   width:48%;
    text-align: center;
 }
 
 #showForm {
-  text-align:left;
-  padding:40px;
-  display:none;
+  padding: 15px;
+  margin: 10px;  
   background: #FFBD59;
-  font-size: 16px;
-  width:46%;
+  color: #000000;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 0.6em;
+  border-radius: 10px;
+  border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
+  width:48%;
+  text-align:left;
+  display:none;
 }
 
-#sellingformButton, #showsellForm {
+#sellingformButton {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -83,25 +90,32 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:46%;
+   width:48%;
    text-align: center;
+   display:inline;
 }
 
 #showsellForm {
-  text-align:left;
-  padding: 40px;
-  display:none;
+  padding: 15px;
+  margin: 10px;  
   background: #FFBD59;
-  width:46%;
-  font-size:16px;
-  float:right;
+  color: #000000;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 0.6em;
+  border-radius: 10px;
+  border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
+  width:48%;
+  text-align:left;
+  display:none;
 }
 
 #portfolioButton, #showPortfolio {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -109,7 +123,7 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:46%;
+   width:48%;
    text-align: center;
 }
 
@@ -117,7 +131,7 @@ body {
   padding:30px;
   display:none;
   background: #FFBD59;
-  width:46%;
+  width:48%;
   float:left;
 }
 
@@ -125,7 +139,7 @@ body {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -133,7 +147,7 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:46%;
+   width:48%;
    text-align: center;
 }
 
@@ -142,14 +156,14 @@ body {
   text-align:left;
   display:none;
   background: #FFBD59;
-  width:46%;
+  width:48%;
 }
 
 #recommendButton {
    padding: 15px;
    margin: 10px;
    background: #FFA500;
-   color: #191970;
+   color: #000000;
    font-size: 18px;
    font-weight: bolder;
    line-height: 0.6em;
@@ -157,6 +171,6 @@ body {
    border: 2px dashed #fff;
    box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
    font-weight: bolder;
-   width:100%;
+   width:48%;
    text-align: center;
 }
