--- a/scripts/style.css
+++ b/scripts/style.css
@@ -56,7 +56,7 @@ body {
   border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:40%;
+  width:43%;
   text-align: center;
 }
 
@@ -71,7 +71,7 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:40%;
+  width:43%;
   text-align:left;
   display:none;
 }
@@ -88,10 +88,9 @@ body {
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:40%;
+  width:43%;
   text-align: center;
   float:right;
-   
 }
 
 #showsellForm {
@@ -105,37 +104,43 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:40%;
+  width:43%;
   text-align:left;
   display:none;
   float:right;
 }
 
-#portfolioButton, #showPortfolio {
+#portfolioButton {
   padding: 15px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;
-  font-size: 18px;
+  color: #000000;   font-size: 18px;
   font-weight: bolder;
   line-height: 0.6em;
-  border-radius: 10px;
-  border: 2px dashed #fff;
+  border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:48%;
+  width:43%;
   text-align: center;
 }
 
 #showPortfolio {
-  padding:30px;
-  display:none;
+  padding: 15px;
+  margin: 10px;  
   background: #FFBD59;
-  width:48%;
-  float:left;
+  color: #000000;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 0.6em;
+  border-radius: 10px;
+  border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
+  width:43%;
+  text-align:left;
+  display:none;
 }
 
-#historyButton, #showHistory{
+#historyButton {
   padding: 15px;
   margin: 10px;
   background: #FFA500;
@@ -147,30 +152,38 @@ body {
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:48%;
+  width:43%;
   text-align: center;
+  float:right;
 }
 
 #showHistory {
-  padding:30px;
+  padding: 15px;
+  margin: 10px;  
+  background: #FFBD59;
+  color: #000000;
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 0.6em;
+  border-radius: 10px;
+  border: 2px dashed #fff;
+  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
+  width:43%;
   text-align:left;
   display:none;
-  background: #FFBD59;
-  width:48%;
+  float:right;
 }
 
 #recommendButton {
   padding: 15px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;
-  font-size: 18px;
+  color: #000000;   font-size: 18px;
   font-weight: bolder;
   line-height: 0.6em;
-  border-radius: 10px;
-  border: 2px dashed #fff;
+  border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:48%;
+  width:43%;
   text-align: center;
 }
