--- a/scripts/style.css
+++ b/scripts/style.css
@@ -56,8 +56,9 @@ body {
   border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:43%;
+  width:45%;
   text-align: center;
+  display: inline-block;
 }
 
 #showForm {
@@ -71,7 +72,7 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:43%;
+  width:45%;
   text-align:left;
   display:none;
 }
@@ -88,9 +89,8 @@ body {
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:43%;
+  width:45%;
   text-align: center;
-  vertical-align: top;
 }
 
 #showsellForm {
@@ -104,7 +104,7 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:43%;
+  width:45%;
   text-align:left;
   display:none;
 }
@@ -119,7 +119,7 @@ body {
   border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:43%;
+  width:45%;
   text-align: center;
 }
 
@@ -134,7 +134,7 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:43%;
+  width:45%;
   text-align:left;
   display:none;
 }
@@ -151,9 +151,8 @@ body {
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:43%;
+  width:45%;
   text-align: center;
-  float:right;
 }
 
 #showHistory {
@@ -167,7 +166,7 @@ body {
   border-radius: 10px;
   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:43%;
+  width:45%;
   text-align:left;
   display:none;
 }
@@ -182,6 +181,6 @@ body {
   border-radius: 10px;   border: 2px dashed #fff;
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: bolder;
-  width:43%;
+  width:45%;
   text-align: center;
 }
