--- a/scripts/style.css
+++ b/scripts/style.css
@@ -58,8 +58,6 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
-  display:inline;
-  float:left;
 }
 
 #showForm {
@@ -92,8 +90,6 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
-  display:inline;
-  float:right;
 }
 
 #showsellForm {
@@ -109,8 +105,7 @@ body {
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
   width:45%;
   text-align:left;
-  display:inline;
-  float:right;
+  display:none;
 }
 
 #portfolioButton {
