--- a/scripts/style.css
+++ b/scripts/style.css
@@ -91,6 +91,7 @@ body {
   width:45%;
   text-align: center;
   position:absolute;
+  top:100px
   left:100px
 }
 
@@ -108,6 +109,9 @@ body {
   width:45%;
   text-align:left;
   display:none;
+  position:absolute;
+  top:100px
+  left:100px
 }
 
 #portfolioButton {
