--- a/scripts/style.css
+++ b/scripts/style.css
@@ -90,7 +90,7 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
-  display :inline;
+  display :inline-block;
   float:right;
 }
 
@@ -107,7 +107,7 @@ body {
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
   width:45%;
   text-align:left;
-  display :inline;
+  display :inline-block;
   float:right;
 }
 
@@ -123,7 +123,7 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
-  display: inline;
+  display: inline-block;
   float:left;
 }
 
@@ -140,7 +140,7 @@ body {
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
   width:45%;
   text-align:left;
-  display:inline;
+  display:inline-block;
   float:left;
 }
 
@@ -158,7 +158,7 @@ body {
   font-weight: bolder;
   width:45%;
   text-align: center;
-  display: inline;
+  display: inline-block;
   float:right;
 }
 
@@ -175,7 +175,7 @@ body {
   box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
   width:45%;
   text-align:left;
-  display:inline;
+  display:inline-block;
   float:right;
 }
 
