--- a/scripts/style.css
+++ b/scripts/style.css
@@ -172,7 +172,7 @@ body {
 
 #showHistory {
   padding: 15px;
-  margin-left: 800px;  
+  margin: 10px; 
   background: #FFBD59;
   color: #000000;
   font-size: 10px;
