--- a/scripts/style.css
+++ b/scripts/style.css
@@ -18,7 +18,7 @@ body {
   padding: 15px;
   margin: 10px;
   background: #989898;
-  color: #000000;
+  color: #FF0033;
   font-size: 18px;
   font-weight: bolder;
   line-height: 0.6em;
