--- a/scripts/style.css
+++ b/scripts/style.css
@@ -19,7 +19,7 @@ body {
   margin: 10px;
   background: #989898;
   color: #100000;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;
@@ -35,7 +35,7 @@ body {
   margin: 10px;
   background: #FFA500;
   color: #000000;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;
@@ -51,7 +51,7 @@ body {
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 0.6em;
   border-radius: 10px;
@@ -66,7 +66,8 @@ body {
   padding: 5px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   font-size: 18px;
+  color: #000000;   
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;   border: 2px dashed #fff;
@@ -81,7 +82,7 @@ body {
   margin: 10px;  
   background: #FFBD59;
   color: #000000;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 0.6em;
   border-radius: 10px;
@@ -97,7 +98,7 @@ body {
   margin: 10px;
   background: #FFA500;
   color: #000000;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;
@@ -113,7 +114,7 @@ body {
   margin: 10px;  
   background: #FFBD59;
   color: #000000;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   line-height: 0.6em;
   border-radius: 10px;
@@ -128,7 +129,8 @@ body {
   padding: 5px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   font-size: 18px;
+  color: #000000;   
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;   border: 2px dashed #fff;
@@ -159,7 +161,7 @@ body {
   margin: 10px;
   background: #FFA500;
   color: #000000;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;
@@ -190,7 +192,8 @@ body {
   padding: 5px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   font-size: 18px;
+  color: #000000;   
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;   border: 2px dashed #fff;
@@ -204,7 +207,8 @@ body {
   padding: 5px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   font-size: 18px;
+  color: #000000;   
+  font-size: 16px;
   font-weight: bolder;
   line-height: 0.6em;
   border-radius: 10px;   border: 2px dashed #fff;
