--- a/scripts/style.css
+++ b/scripts/style.css
@@ -1,11 +1,5 @@
-{
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-margin-before: 0;
-  -webkit-margin-after: 0;	
-}
-
 img {
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 body {
