--- a/scripts/style.css
+++ b/scripts/style.css
@@ -8,7 +8,7 @@ body {
   padding: 5px;
   margin: 10px;
   background: #989898;
-  color: #100000;
+  color: #000000;
   font-size: 12px;
   font-weight: bolder;
   line-height: 0.6em;
@@ -24,15 +24,15 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;
+  color: #fff;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;
+  font-weight: bold;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
-  width:96%;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
+  width:100%;
   text-align: center;
 }
 
