--- a/scripts/style.css
+++ b/scripts/style.css
@@ -24,7 +24,7 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #fff;
+  color: #000000;
   font-size: 16px;
   font-weight: bold;
   line-height: 1.3em;
@@ -32,7 +32,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:100%;
+  width:98%;
   text-align: center;
 }
 
@@ -56,13 +56,14 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   
+  color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
@@ -89,12 +90,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;
+  font-weight: bold;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
@@ -119,13 +120,14 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   
+  color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
@@ -152,12 +154,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;
+  font-weight: bold;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
@@ -182,13 +184,14 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   
+  color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
@@ -197,13 +200,14 @@ body {
   padding: 10px;
   margin: 10px;
   background: #FFA500;
-  color: #000000;   
+  color: #000000;
   font-size: 16px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  font-weight: normal;
   width:45%;
   text-align: center;
 }
