--- a/scripts/style.css
+++ b/scripts/style.css
@@ -10,13 +10,12 @@ body {
   background: #989898;
   color: #000000;
   font-size: 12px;
-  font-weight: bolder;
-  line-height: 0.6em;
-  border-radius: 10px;
+  font-weight: normal;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: bolder;
-  width:96%;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #989898, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 98%;
   text-align: center;
 }
 
@@ -32,7 +31,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:98%;
+  width: 98%;
   text-align: center;
 }
 
@@ -43,11 +42,11 @@ body {
   color: #000000;
   font-size: 12px;
   font-weight: normal;
-  line-height: 0.6em;
-  border-radius: 10px;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width:96%;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 98%;
   text-align: center;
   display:none;
 }
@@ -70,18 +69,18 @@ body {
 
 #showForm {
   padding: 5px;
-  margin: 10px;  
+  margin: 10px;	
   background: #FFBD59;
   color: #000000;
   font-size: 12px;
   font-weight: normal;
-  line-height: 0.6em;
-  border-radius: 10px;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:45%;
-  text-align:left;
-  display:none;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 45%;
+  text-align: left;
+  display: none;
 }
 
 #sellingformButton {
@@ -96,24 +95,24 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:45%;
+  width: 45%;
   text-align: center;
 }
 
 #showsellForm {
   padding: 5px;
-  margin: 10px;  
+  margin: 10px;	
   background: #FFBD59;
   color: #000000;
   font-size: 12px;
   font-weight: normal;
-  line-height: 0.6em;
-  border-radius: 10px;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:45%;
-  text-align:left;
-  display:none;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 45%;
+  text-align: left;
+  display: none;
 }
 
 #portfolioButton {
@@ -128,24 +127,24 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:45%;
+  width: 45%;
   text-align: center;
 }
 
 #showPortfolio {
   padding: 5px;
-  margin: 10px;  
+  margin: 10px;	
   background: #FFBD59;
   color: #000000;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
-  line-height: 0.6em;
-  border-radius: 10px;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:45%;
-  text-align:left;
-  display:none;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 45%;
+  text-align: left;
+  display: none;
 }
 
 #historyButton {
@@ -160,24 +159,24 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:45%;
+  width: 45%;
   text-align: center;
 }
 
 #showHistory {
   padding: 5px;
-  margin: 10px; 
+  margin: 10px;	
   background: #FFBD59;
   color: #000000;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
-  line-height: 0.6em;
-  border-radius: 10px;
+  line-height: 1.3em;
   border: 2px dashed #fff;
-  box-shadow: 0 0 0 4px #000000, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);  
-  width:45%;
-  text-align:left;
-  display:none;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  width: 45%;
+  text-align: left;
+  display: none;
 }
 
 #recommendButton {
@@ -192,7 +191,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:45%;
+  width: 45%;
   text-align: center;
 }
 
@@ -208,6 +207,6 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   font-weight: normal;
-  width:45%;
+  width: 45%;
   text-align: center;
 }
