--- a/scripts/style.css
+++ b/scripts/style.css
@@ -15,7 +15,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #989898, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 98%;
+  width: 96%;
   text-align: center;
 }
 
@@ -25,13 +25,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 98%;
+  width: 96%;
   text-align: center;
 }
 
@@ -46,7 +45,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 98%;
+  width: 96%;
   text-align: center;
   display:none;
 }
@@ -57,13 +56,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width:45%;
+  width:50%;
   text-align: center;
 }
 
@@ -78,7 +76,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 45%;
+  width: 50%;
   text-align: left;
   display: none;
 }
@@ -89,13 +87,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 45%;
+  width: 50%;
   text-align: center;
 }
 
@@ -110,7 +107,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 45%;
+  width: 50%;
   text-align: left;
   display: none;
 }
@@ -121,13 +118,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 45%;
+  width: 50%;
   text-align: center;
 }
 
@@ -142,7 +138,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 45%;
+  width: 50%;
   text-align: left;
   display: none;
 }
@@ -153,13 +149,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 45%;
+  width: 50%;
   text-align: center;
 }
 
@@ -174,7 +169,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 45%;
+  width: 50%;
   text-align: left;
   display: none;
 }
@@ -185,13 +180,12 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 45%;
+  width: 50%;
   text-align: center;
 }
 
@@ -201,12 +195,11 @@ body {
   background: #FFA500;
   color: #000000;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  font-weight: normal;
-  width: 45%;
+  width: 50%;
   text-align: center;
 }
