--- a/scripts/style.css
+++ b/scripts/style.css
@@ -26,6 +26,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -57,6 +58,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -88,6 +90,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -119,6 +122,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -150,6 +154,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -181,6 +186,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -196,6 +202,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
+  font-style: italic,
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
