--- a/scripts/style.css
+++ b/scripts/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 #showEquity {
-  padding: 5px;
+  padding: 10px;
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
@@ -48,6 +48,7 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 96%;
   text-align: center;
+  display: none;
 }
 
 #purchasingformButton {
@@ -62,12 +63,12 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width:48%;
+  width:47%;
   text-align: center;
 }
 
 #showForm {
-  padding: 5px;
+  padding: 10px;
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
@@ -77,7 +78,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: left;
 }
 
@@ -93,12 +94,12 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: center;
 }
 
 #showsellForm {
-  padding: 5px;
+  padding: 10px;
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
@@ -108,7 +109,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: left;
 }
 
@@ -124,12 +125,12 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: center;
 }
 
 #showPortfolio {
-  padding: 5px;
+  padding: 10px;
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
@@ -139,7 +140,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: left;
 }
 
@@ -155,12 +156,12 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: center;
 }
 
 #showHistory {
-  padding: 5px;
+  padding: 10px;
   margin: 10px;	
   background: #FFBD59;
   color: #000000;
@@ -170,7 +171,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 48%;
+  width: 47%;
   text-align: left;
 }
 
@@ -186,7 +187,7 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 50%;
+  width: 47%;
   text-align: center;
 }
 
@@ -202,6 +203,6 @@ body {
   border: 2px dashed #fff;
   border-radius: 10px;
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
-  width: 50%;
+  width: 47%;
   text-align: center;
 }
