--- a/scripts/style.css
+++ b/scripts/style.css
@@ -26,7 +26,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -58,7 +58,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -89,7 +89,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -120,7 +120,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -151,7 +151,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -182,7 +182,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
@@ -198,7 +198,7 @@ body {
   color: #000000;
   font-size: 16px;
   font-weight: bolder;
-  font-style: italic,
+  font-style: italic;
   line-height: 1.3em;
   border: 2px dashed #fff;
   border-radius: 10px;
