--- a/scripts/style.css
+++ b/scripts/style.css
@@ -173,6 +173,8 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: left;
+  position: relative;
+  left: 20px;
 }
 
 #recommendButton {
