--- a/scripts/style.css
+++ b/scripts/style.css
@@ -206,3 +206,25 @@ body {
   width: 46%;
   text-align: center;
 }
+
+#submit {
+  cursor:pointer;
+  padding:5px 25px; 
+  background:#35b128; 
+  border:1px solid #33842a;  
+  -moz-border-radius: 10px; 
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 4px rgba(0,0,0, .75);
+  -moz-box-shadow: 0 0 4px rgba(0,0,0, .75);
+  box-shadow: 0 0 4px rgba(0,0,0, .75);
+  color:#f3f3f3;
+  font-size:1.1em;
+}
+
+#submit:hover, #submit:focus{
+  background-color :#399630; 
+  -webkit-box-shadow: 0 0 1px rgba(0,0,0, .75);
+  -moz-box-shadow: 0 0 1px rgba(0,0,0, .75); 
+  box-shadow: 0 0 1px rgba(0,0,0, .75);
+}
