--- a/scripts/style.css
+++ b/scripts/style.css
@@ -17,6 +17,7 @@ body {
   box-shadow: 0 0 0 4px #989898, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 96%;
   text-align: center;
+  vertical-align: top;
 }
 
 #equityButton {
@@ -33,6 +34,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 96%;
   text-align: center;
+  vertical-align: top;
 }
 
 #showEquity {
@@ -49,6 +51,7 @@ body {
   width: 96%;
   text-align: center;
   display: none;
+  vertical-align: top;
 }
 
 #purchasingformButton {
@@ -65,6 +68,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width:46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #showForm {
@@ -80,6 +84,7 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: left;
+  vertical-align: top;
 }
 
 #sellingformButton {
@@ -96,6 +101,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #showsellForm {
@@ -111,6 +117,7 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: left;
+  vertical-align: top;
 }
 
 #portfolioButton {
@@ -127,6 +134,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #showPortfolio {
@@ -142,6 +150,7 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: left;
+  vertical-align: top;
 }
 
 #historyButton {
@@ -158,6 +167,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #showHistory {
@@ -173,6 +183,7 @@ body {
   box-shadow: 0 0 0 4px #FFBD59, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: left;
+  vertical-align: top;
 }
 
 #recommendButton {
@@ -189,6 +200,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #postButton {
@@ -205,6 +217,7 @@ body {
   box-shadow: 0 0 0 4px #FFA500, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 46%;
   text-align: center;
+  vertical-align: top;
 }
 
 #submit {
