--- a/scripts/style.css
+++ b/scripts/style.css
@@ -239,13 +239,19 @@ body {
 
 #forumButton {
   position: relative;
-  color: rgba(255,255,255,1);
-  text-decoration: none;
-  background-color: rgba(219,87,5,1);
-  font-family: 'Yanone Kaffeesatz';
-  font-weight: bolder;
+
+  padding: 10px;
+  margin: 10px;
+  background: #FFA500;
+  color: #000000;
   font-size: 16px;
-  padding: 4px;
+  font-weight: bolder;
+  font-style: italic;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  width: 46%;
+  text-align: center;
+
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
